Fixed horizontal scrolling, added favicon

--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ h3 {
 
 .project {
     display: inline-block;
-    width: 100%;
-    padding: 1.5rem 1rem;
+    width: 90%;
+    padding: 1.5rem 5%;
     max-width: 1000px;
 }
 
